# Projects--c---

./: CMakeLists.txt  readme.txt  test.cpp
Calculator/: main.cpp
Ciba/pr8/: 1.cpp  2.1.cpp  2.2.cpp  2.3.cpp  2.4.cpp  2.5.cpp  2.cpp  3.cpp
Course/Module 10/10.4/: 10.4.cpp
Course/Module 11/11.6.1/: Caesar_cipher  Caesar_cipher.cpp
Course/Module 11/11.6.2/: Correct emai  Correct_email.cpp
Course/Module 11/11.6.3/: Check IP  Check_IP.cpp
Course/Module 11/11.6.4/: Float comprasion  Float_comparison.cpp
Course/Module 11/11.6.5/: Tic tac toe  TicTacToe.cpp
Course/Module 12/12.4.1/: Apartment house  Apartment_house.cpp
Course/Module 12/12.4.2/: Row of numbers  RowOfNumbers.cpp
Course/Module 12/12.4.3/: Sorting day  SortingDay.cpp
Course/Module 13/13.6.1/: Vector integer  VectorInt.cpp
Course/Module 13/13.6.2/: Total price  TotalPrice.cpp
Course/Module 13/13.6.3/: Data Base  DataBase.cpp
Course/Module 14/14.6.1/: BanquetTable  BanquetTable.cpp
Course/Module 14/14.6.2/: TicTacToeMass.cpp  tictectoe
Course/Module 14/14.6.3/: SnakeMas.cpp  SnakeMass
Course/Module 14/14.6.4/: EqualityOfMatrices  EqualityOfMatrices.cpp
Course/Module 14/14.6.5/: Diagonal Matrix  DiagonalMatrix.cpp
Course/Module 14/14.6.6/: matrix multiplication  matrix_multiplication.cpp
Course/Module 14/14.6.7/: Pypirka  Pypirka.cpp
Course/Module 14/14.6.8/: Minecraft.cpp  minecraft
Course/Module 14/14.6.9/: SeaBattle  SeaBattle.cpp
Course/Module 15/15.6.1/: Task1.cpp
Course/Module 15/15.6.2/: Task2.cpp
Course/Module 15/15.6.3/: Task3.cpp
Course/Module 15/15.6.4/: Task4.cpp
Course/Module 16/16.4.1/: Speedometer.cpp
Course/Module 16/16.4.2/: Stapler.cpp
Course/Module 16/16.4.3/: Calculator.cpp
Course/Module 16/16.4.4/: Piano.cpp
Course/Module 16/16.4.5/: Smart_House.cpp  smart_house
Course/Module 17/Task 1/: Task1.cpp
Course/Module 17/Task 2/: Task2.cpp
Course/Module 17/Task 3/: Task3.cpp
Course/Module 18/Task 1/: Task1.cpp
Course/Module 18/Task 2/: Task2.cpp
Course/Module 18/Task 3/: Task3.cpp
Course/Module 18/Task 4/: Task4.cpp
Course/Module 19/Task 1/: Task1.cpp  readme.txt  words.txt
Course/Module 19/Task 2/: Task2.cpp  file.txt  readme.txt
Course/Module 19/Task 3/: Task3.cpp  file.txt  readme.txt
Course/Module 19/Task 4/: Task4.cpp  readme.txt
Course/Module 19/Task 5/: Answers.txt  Questions.txt  WhatWhereWhen.cpp  readme.txt
Course/Module 20/Task 1/: Task1.cpp  file.txt  readme.txt
Course/Module 20/Task 2/: Pic.cpp  pic.txt  readme.txt
Course/Module 20/Task 3/: caugth_fish.txt  fishing.cpp  readme.txt
Course/Module 20/Task 4/: ATM.cpp  readme.txt  stash.txt
Course/Module 21/Task 1/: Task1.cpp  readme.txt
Course/Module 21/Task 2/: Task2.cpp  readme.txt
Course/Module 21/Task 3/: Task3.cpp  readme.txt
Course/Module 21/Task 4/: Task4.cpp  readme.txt
Course/Module 22/Task 1/: Task1.cpp  readme.txt  v2.cpp
Course/Module 22/Task 2/: CMakeLists.txt  Task2.cpp  readme.txt
Course/Module 22/Task3/: Task3.cpp  readme.txt
Course/Module 23/Task 1/: CMakeLists.txt  Task1.cpp  Task11.cpp  readme.txt
Course/Module 23/Task 2/: CMakeLists.txt  Task2.cpp  readme.txt
Course/Module 23/Task 3/: CMakeLists.txt  main.cpp  readme.txt
Course/Module 24/Task 1/: CMakeLists.txt  main.cpp  readme.txt  saves.txt
Course/Module 24/Task 2/: CMakeLists.txt  main.cpp  readme.txt
Course/Module 24/Task 3/: main.cpp  readme.txt
Course/Module 25/Task 1/: CMakeLists.txt  readme.txt
Course/Module 25/Task 2/: CMakeLists.txt  readme.txt
Course/Module 25/Task 2/src/: CMakeLists.txt  Cpu.cpp  Disk.cpp  Gpu.cpp  Kbd.cpp  Ram.cpp  main.cpp
Course/Module 26/Task 1/: CMakeLists.txt  readme.txt
Course/Module 26/Task 2/: main.cpp  readme.txt
Course/Module 26/Task 3/: CMakeLists.txt  readme.txt
Course/Module 26/Task1_v2/: CMakeLists.txt
Course/Module 27/Task 1/: main.cpp
Course/Module 27/Task 2/: CMakeLists.txt
Course/Module 27/Task 3/: main.cpp
Course/Module 28/Task 1/: CMakeLists.txt  main.cpp  readMe.txt
Course/Module 28/Task 1 v2/: CMakeLists.txt  main.cpp
Course/Module 30/Task 2/: CMakeLists.txt  main.cpp
Learning/Dinamic_massive/: dinamic_massive.cpp
Learning/Padenie/: main.cpp
Learning/Reseto_Eratocfena/: main.cpp
Learning/TellMeYourNumber/: main.cpp
Learning/dinamic_mark/: main.cpp
Learning/sort()/: 1.cpp
Portfolio/LoginAndRegistrationSystem/: CMakeLists.txt
Pr(c++)/: CMakeLists.txt
Some Projects/BlackJack/: CMakeLists.txt  ReadMe.txt  main.cpp  mainV1.1.cpp  mainV1.2.cpp  notes.txt
Some Projects/Bubble_Sort/: Bubble_Sort.cpp
Some Projects/Calculator/: CMakeLists.txt  main.cpp
Some Projects/Rectangles/: CMakeLists.txt  main.cpp
Some Projects/Sort_by_selection/: Sort_by_selection.cpp
Some Projects/TestCode/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  main.cpp
(+49 files in other folders)
